    - Create a new session id for the childs. (Closes: #28627@Nokia)
    - Use new --booster option and select the gtk module.
    - Use the renamed --enable-hildon-booster instead of --extra-libs in
      configure.
    - Remove the now not required LD_BIND_NOW environment variable from
      the init script (as it's implemented using the boosters).
      (Closes: #28055@Nokia)

 -- Guillem Jover <guillem.jover@nokia.com>  Mon,  3 Jul 2006 18:06:54 +0300

maemo-launcher (0.17-1) unstable; urgency=low

  * New Upstream Release.
    - Do not send the application died signal by default, because some
      people believe that by not showing applications crashing, that
      will fix their bugs... (Closes: #32915@Nokia)

 -- Guillem Jover <guillem.jover@nokia.com>  Mon, 19 Jun 2006 12:29:20 +0300

maemo-launcher (0.16-1) unstable; urgency=low

  * New Upstream Release.
    - Ignore SIGPIPE in the launcher, so that it does not die miserably.
      (Closes: #32718@Nokia)

 -- Guillem Jover <guillem.jover@nokia.com>  Thu, 15 Jun 2006 17:18:42 +0300

maemo-launcher (0.15-1) unstable; urgency=low

  * New Upstream Release.
    - Relicense to GPL version 2 only.
    - Change copyright holder to "Nokia Corporation".
  * Enable yet again LD_BIND_NOW=1 on startup. (Closes: #28055@Nokia)

 -- Guillem Jover <guillem.jover@nokia.com>  Fri,  9 Jun 2006 15:24:06 +0300

maemo-launcher (0.14-2) unstable; urgency=low

  * Disable for now LD_BIND_NOW=1 in the init script due to it "breaking"
    the browser plugins...

 -- Guillem Jover <guillem.jover@nokia.com>  Tue, 23 May 2006 17:26:44 +0300

maemo-launcher (0.14-1) unstable; urgency=low

  * New Upstream Release.
    - Force all relocations to be resolved at startup time, but not for the
      childs. (Closes: #28055@Nokia)
    - Protect the childs that have negative priority from the OOM killer by
      setting the adjust value to -17. (Closes: #29529@Nokia)
  * Bump Standards-Version to 3.7.2 (no changes needed).
